# src/core/auth/dto/update-password.dto.ts
@@ -1,0 +1,13 @@
+import { IsNotEmpty, IsString, MaxLength } from "class-validator";
+
+export class UpdatePasswordDto {
+    @IsNotEmpty()
+    @IsString()
+    @MaxLength(100)
+    oldPassword: string;
+
+    @IsNotEmpty()
+    @IsString()
+    @MaxLength(100)
+    newPassword: string;
+}
