# src/core/auth/dto/update-user.dto.ts
@@ -1,0 +1,8 @@
+import { IsNotEmpty, IsString, Length } from 'class-validator';
+
+export class UpdateUserDto {
+  @IsNotEmpty()
+  @IsString()
+  @Length(3, 100)
+  name: string;
+}
